--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "peerDependencies": {
+    "react-spring": "^8.0.27"
   }
 }
