--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "aos": "^2.3.4",
     "immutable": "*",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
@@ -44,5 +46,8 @@
   },
   "peerDependencies": {
     "react-spring": "^8.0.27"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.3"
   }
 }
