--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "react-scripts": "4.0.3",
+    "react-scrollspy": "^3.4.3",
+    "react-scrollspy-navigation": "^1.0.2",
+    "react-use-scroll-indicator": "^1.1.1",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.3",
+    "@types/react-scrollspy": "^3.3.3",
     "@types/webpack-env": "^1.16.0"
   }
 }
