--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "aos": "^2.3.4",
+    "classnames": "^2.3.1",
     "immutable": "*",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
