--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "react-scrollspy": "^3.4.3",
     "react-scrollspy-navigation": "^1.0.2",
     "react-use-scroll-indicator": "^1.1.1",
