--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
+    "react-masonry-css": "^1.0.16",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "react-scrollspy": "^3.4.3",
