--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "thestrongestluknight",
   "version": "0.1.0",
+  "homepage": "https://tam-carre.github.io/thestrongestluknight/",
   "private": true,
   "dependencies": {
     "@react-spring/parallax": "^9.2.3",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^17.0.7",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.2",
     "immutable": "*",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
@@ -28,6 +30,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
