--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.7",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
+    "country-flag-icons": "^1.2.10",
     "gh-pages": "^3.2.2",
     "immutable": "*",
     "node-sass": "^6.0.0",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.3",
+    "@types/country-flag-icons": "^1.2.0",
     "@types/react-scrollspy": "^3.3.3",
     "@types/webpack-env": "^1.16.0"
   }
