--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "HimeCoco",
-  "name": "The Greatest Luknight",
+  "name": "The Strongest Luknight",
   "icons": [
     {
       "src": "favicon.ico",
